penambahan file login, file register dan 2 font

--- a/index.html
+++ b/index.html
@@ -64,29 +64,32 @@
     <div id="highlight" class="bg-softcream">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-sm-12 text-center">
+                <div class="col-md-3 col-sm-12 text-center">
                     <div class="highlight-block height-700">
                         <div class="vcenter">
-                            <h3 class="color-brown fw-bold">Hangat, lembut, dan selalu bikin rindu.</h3>
-                            <p class="lead color-brown">Setiap gigita kue Bingka kami membawa pulang kenangan masa kecil - freshly baked setiap hari untuk kamu.</p>
+                            <h3 class="color-brown font-mochiypop">Hangat, lembut, dan selalu bikin rindu.</h3>
+                            <p class="lead color-brown font-poppins">Setiap gigitan kue Bingka kami membawa pulang kenangan masa kecil - freshly baked setiap hari untuk kamu.</p>
                             <img src="images/bika.png" class="img-fluid">
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12 text-center">
+                <div class="col-md-6 col-sm-12 text-center">
                     <div class="highlight-block height-700">
                         <div class="vcenter">
-                            <h1 class="color-brown fw-bold">Kenangan Manis dalam Setiap Potong.</h1>
+                            <h1 class="color-brown main-title">Kenangan Manis dalam Setiap Potong.</h1>
                             <img src="images/yoga.png" class="img-fluid" />
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12 text-center">
+                <div class="col-md-3 col-sm-12 text-center">
                     <div class="highlight-block height-700">
                         <div class="vcenter">
-                            <h3 class="color-brown fw-bold">Setiap Lapisan Cerita Rasa.</h3>
-                            <p class="lead color-brown">Perpaduan sempurna tekstur lembut dan aroma khas yang melekat di memori.</p>                            
-                            <a hreg="#" class="general-button">Shop Now</a>
+                            <br><br><br><br><br><br><br>
+                            <h3 class="color-brown font-mochiypop">Setiap Lapisan Cerita Rasa.</h3>
+                            <p class="lead color-brown font-poppins">Perpaduan sempurna tekstur lembut dan aroma khas yang melekat di memori.</p>                            
+                           <br><br><br>
+
+                            <a href="products.html" class="general-button">Shop Now</a>
                         </div>
                     </div>
                 </div>
