--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Home</title>
 
     <!-- menggunakan library populer bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -17,7 +17,7 @@
     <!-- pt artinya padding top, pb artinya padding bottom -->
     <div id="topbar" class="bg-softcream pt-4 pb-4">
         <!-- container adalah class bootstrap -->
-        <div class="container">
+        <div class="container-fluid">
             <!-- class row untuk membuat kolom -->
             <div class="row">
                 <!-- kolom 1 -->
@@ -36,10 +36,9 @@
                             <div id="topmenu">
                                 <div class="menu">
                                     <ul>
-                                        <li><a href="index.html">Home</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="products.html">Products</a></li>
-                                        <li><a href="location.html">Location</a></li>
+                                        <li><a href="#">Pembayaran</a></li>
+                                        <li><a href="#">Pesanan</a></li>
+                                        <li><a href="#">Manajemen</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -50,8 +49,8 @@
                 <!-- kolom 3 -->
                 <div class="col">
                     <div id="cart" class="height-50">
-                        <div class="vcenter">
-                            <img src="images/cart.png">
+                        <div class="vcenter fw-bold font-poppins">
+                          Admin &nbsp; &nbsp; &nbsp;   <img src="images/profilelogo.png">  &nbsp; &nbsp;  <a onclick="logout()" href="#">logout</a> 
                         </div>
                     </div>
                 </div>
@@ -59,3 +58,9 @@
         </div>
     </div>
     <!-- ========= END TOPBAR ========= -->
+
+      <script src="admin.js"></script>
+</body>
+</html>
+
+  
