--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- pt artinya padding top, pb artinya padding bottom -->
     <div id="topbar" class="bg-softcream pt-4 pb-4">
         <!-- container adalah class bootstrap -->
-        <div class="container">
+        <div class="container-fluid">
             <!-- class row untuk membuat kolom -->
             <div class="row">
                 <!-- kolom 1 -->
@@ -50,8 +50,8 @@
                 <!-- kolom 3 -->
                 <div class="col">
                     <div id="cart" class="height-50">
-                        <div class="vcenter">
-                            <img src="images/cart.png">
+                        <div class="vcenter fw-bold font-poppins">
+                            <img src="images/cart.png"> &nbsp; &nbsp; &nbsp; <a href="register.html">login</a>
                         </div>
                     </div>
                 </div>
