--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="w-1000">
                 <h2 class="color-brown fw-bold">Coba Hitung Jarakmu dari Miantie yuk!</h2>
                 <br />
-                <a href="#" class="general-button">Maps toko</a>
+                <a target="_blank" href="https://www.google.com/maps/place/Mianti%C3%A9.id/@-7.6553954,112.8974542,17z/data=!3m1!4b1!4m6!3m5!1s0x2dd7c500470ef649:0x895cecc5fa415825!8m2!3d-7.6554007!4d112.9000291!16s%2Fg%2F11xdst46x2?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D" class="general-button">Maps toko</a>
                 <br /><br /><br />
                 <img src="images/distance.png" class="img-fluid" style="width: 100px;">
                 <br /><br /><br />
@@ -161,9 +161,11 @@
                     <div class="col">
                         <div class="height-50">
                             <div class="vcenter">
-                                <input type="text" placeholder="masukkan alamat" class="general-input">
+                                <input id="alamat" type="text" placeholder="masukkan alamat" class="general-input">
                                 <br /><br />
-                                <a href="#" class="general-button">Hitung Ongkir</a>
+                                <button onclick="hitungJarak()" class="general-button">Hitung jarak</button>
+                                <div id="hasil" class="mt-4 mb-2"></div> 
+                                <a target="_blank" href="https://www.google.com/maps/dir/?api=1&destination=-7.6553954,112.8974542">Cek di Google Map</a>
                             </div>
                         </div>
                     </div>
@@ -228,5 +230,7 @@
     
     <!-- menggunakan library populer bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="distance.js"></script>
+
 </body>
 </html>
