--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Products - Miantie.id</title>
 
     <!-- menggunakan library populer bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -11,20 +11,16 @@
     <!-- desain warna, block dan gaya menyesuaikan desain figma -->
     <link href="style.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-softcream">
     <!-- ========= START TOPBAR ========= -->
-    <!-- class p artinya padding (jarak antar ruang dengan contentnya) milik bootstrap -->
-    <!-- pt artinya padding top, pb artinya padding bottom -->
     <div id="topbar" class="bg-softcream pt-4 pb-4">
-        <!-- container adalah class bootstrap -->
         <div class="container">
-            <!-- class row untuk membuat kolom -->
             <div class="row">
                 <!-- kolom 1 -->
                 <div class="col">
                     <div id="logo" class="height-50">
                         <div class="vcenter">
-                            <img src="images/miantie-logo.png">
+                            <img src="images/miantie-logo.png" alt="Miantie Logo">
                         </div>
                     </div>
                 </div>
@@ -37,7 +33,7 @@
                                 <div class="menu">
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="about.html">About</a></li>
+                                        <li><a href="about.html">About us</a></li>
                                         <li><a href="products.html">Products</a></li>
                                         <li><a href="location.html">Location</a></li>
                                     </ul>
@@ -51,7 +47,8 @@
                 <div class="col">
                     <div id="cart" class="height-50">
                         <div class="vcenter">
-                            <img src="images/cart.png">
+                            <img src="images/cart.png" alt="Cart">
+                            <span class="ms-3 fw-bold">Login</span>
                         </div>
                     </div>
                 </div>
@@ -59,3 +56,178 @@
         </div>
     </div>
     <!-- ========= END TOPBAR ========= -->
+
+    <!-- ========= START PRODUCTS SECTION ========= -->
+    <div id="products-section" class="py-5">
+        <div class="container">
+            <!-- Header Section -->
+            <div class="text-center mb-4">
+                <h1 class="products-title color-brown">Kenangan Manis dalam Setiap Potong</h1>
+                <p class="products-subtitle">Setiap gigitan kue Bingka kami membawa pulang kenangan masa kecil — freshly baked setiap hari untuk kamu.</p>
+            </div>
+
+            <!-- Search Bar -->
+            <!-- Search Bar -->
+<<!-- Search Bar -->
+<div class="row justify-content-center mb-5">
+    <div class="col-md-20">  <!-- Ubah jadi col-md-10 untuk lebih panjang -->
+        <div class="search-box">
+            <img src="images/search-icon.png" alt="Search" class="search-icon">
+            <input type="text" class="search-input" placeholder="Cari produk...">
+        </div>
+    </div>
+</div>
+
+            <!-- Products Grid -->
+            <div class="row g-4">
+                <!-- Product 1 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/bingkaoriginal.png" alt="Bingka original">
+                        </div>
+                        <h3 class="product-name">Bingka original</h3>
+                        <p class="product-price">Rp5.000 <span>/PCS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+
+                <!-- Product 2 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/bingkachocochips.png" alt="Bingka Chocochip">
+                        </div>
+                        <h3 class="product-name">Bingka Chocochip</h3>
+                        <p class="product-price">Rp6.000 <span>/PCS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+
+                <!-- Product 3 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/bingkakeju.png" alt="Bingka keju">
+                        </div>
+                        <h3 class="product-name">Bingka keju</h3>
+                        <p class="product-price">Rp6.000 <span>/PCS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+
+                <!-- Product 4 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/bingkacoklat.png" alt="Bingka coklat">
+                        </div>
+                        <h3 class="product-name">Bingka coklat</h3>
+                        <p class="product-price">Rp6.000 <span>/PCS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+
+                <!-- Product 5 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/bingkakismis.png" alt="Bingka Kismis">
+                        </div>
+                        <h3 class="product-name">Bingka Kismis</h3>
+                        <p class="product-price">Rp6.000 <span>/SACKS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+
+                <!-- Product 6 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/esmambocoklat.png" alt="es mambo coklat">
+                        </div>
+                        <h3 class="product-name">es mambo coklat</h3>
+                        <p class="product-price">Rp1.000 <span>/PCS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+
+                <!-- Product 7 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/esmambotaro.png" alt="es mambo taro">
+                        </div>
+                        <h3 class="product-name">es mambo taro</h3>
+                        <p class="product-price">Rp1.000 <span>/PCS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+
+                <!-- Product 8 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/esmambostrawberry.png" alt="es mambo strawberry">
+                        </div>
+                        <h3 class="product-name">es mambo strawberry</h3>
+                        <p class="product-price">Rp1.000 <span>/PCS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+
+                <!-- Product 9 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/esmambomatcha.png" alt="es mambo matcha">
+                        </div>
+                        <h3 class="product-name">es mambo matcha</h3>
+                        <p class="product-price">Rp1.000 <span>/PCS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+
+                <!-- Product 10 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/esmamboblueberry.png" alt="es mambo blueberry">
+                        </div>
+                        <h3 class="product-name">es mambo blueberry</h3>
+                        <p class="product-price">Rp1.000 <span>/PCS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+
+                <!-- Product 11 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/boluketanhitam.png" alt="Bolu ketan original">
+                        </div>
+                        <h3 class="product-name">Bolu ketan original</h3>
+                        <p class="product-price">Rp15.000 <span>/3 PCS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+
+                <!-- Product 12 -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="images/boluketanlumer.png" alt="Bolu ketan lumer">
+                        </div>
+                        <h3 class="product-name">Bolu ketan lumer</h3>
+                        <p class="product-price">Rp20.000 <span>/3 PCS</span></p>
+                        <button class="btn-pilih">Pilih</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ========= END PRODUCTS SECTION ========= -->
+
+    <script src="products.js"></script>
+</body>
+</html>
