--- a/about.html
+++ b/about.html
@@ -48,10 +48,14 @@
                 </div>
 
                 <!-- kolom 3 -->
-                <div class="col">
+               <div class="col">
                     <div id="cart" class="height-50">
                         <div class="vcenter">
-                            <img src="images/cart.png"> 
+                            <a href="cart.html">
+                                <img src="images/cart.png"> <span id="cart-count" class="badge rounded-pill bg-danger">0</span>
+                            </a>
+                            &nbsp; &nbsp; &nbsp; 
+                            <a href="login.html" class="fw-bold text-dark text-decoration-none">login</a>
                         </div>
                     </div>
                 </div>
@@ -196,5 +200,6 @@
     <!-- ========= END FOOTER ========= -->    
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="totalcart.js"></script>
 </body>
 </html>
