--- a/index.html
+++ b/index.html
@@ -48,10 +48,14 @@
                 </div>
 
                 <!-- kolom 3 -->
-                <div class="col">
+                 <div class="col">
                     <div id="cart" class="height-50">
-                        <div class="vcenter fw-bold font-poppins">
-                            <img src="images/cart.png"> &nbsp; &nbsp; &nbsp; <a href="register.html">login</a>
+                        <div class="vcenter">
+                            <a href="cart.html">
+                                <img src="images/cart.png"> <span id="cart-count" class="badge rounded-pill bg-danger">0</span>
+                            </a>
+                            &nbsp; &nbsp; &nbsp; 
+                            <a href="login.html" class="fw-bold text-dark text-decoration-none">login</a>
                         </div>
                     </div>
                 </div>
@@ -231,6 +235,7 @@
     <!-- menggunakan library populer bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="distance.js"></script>
+    <script src="totalcart.js"></script>
 
 </body>
 </html>
