--- a/pembayaranqris.html
+++ b/pembayaranqris.html
@@ -11,7 +11,7 @@
     <!-- desain warna, block dan gaya menyesuaikan desain figma -->
     <link href="style.css" rel="stylesheet">
 </head>
-<body class="bg-softcream">
+<body class="bg-white">
     <!-- ========= START QRIS PAYMENT SECTION ========= -->
     <div id="qris-payment-section">
         <div class="container">
