--- a/products.html
+++ b/products.html
@@ -47,8 +47,11 @@
                 <div class="col">
                     <div id="cart" class="height-50">
                         <div class="vcenter">
-                            <img src="images/cart.png" alt="Cart">
-                            <span class="ms-3 fw-bold">Login</span>
+                            <a href="cart.html">
+                                <img src="images/cart.png"> <span id="cart-count" class="badge rounded-pill bg-danger">0</span>
+                            </a>
+                            &nbsp; &nbsp; &nbsp; 
+                            <a href="login.html" class="fw-bold text-dark text-decoration-none">login</a>
                         </div>
                     </div>
                 </div>
@@ -72,162 +75,23 @@
 <div class="row justify-content-center mb-5">
     <div class="col-md-20">  <!-- Ubah jadi col-md-10 untuk lebih panjang -->
         <div class="search-box">
-            <img src="images/search-icon.png" alt="Search" class="search-icon">
-            <input type="text" class="search-input" placeholder="Cari produk...">
+            <img src="images/search.png" alt="Search" class="search-icon">
+            <input id="searchInput" type="text" class="search-input" placeholder="Cari produk...">
         </div>
     </div>
 </div>
 
-            <!-- Products Grid -->
-            <div class="row g-4">
-                <!-- Product 1 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/bingkaoriginal.png" alt="Bingka original">
-                        </div>
-                        <h3 class="product-name">Bingka original</h3>
-                        <p class="product-price">Rp5.000 <span>/PCS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
-
-                <!-- Product 2 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/bingkachocochips.png" alt="Bingka Chocochip">
-                        </div>
-                        <h3 class="product-name">Bingka Chocochip</h3>
-                        <p class="product-price">Rp6.000 <span>/PCS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
-
-                <!-- Product 3 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/bingkakeju.png" alt="Bingka keju">
-                        </div>
-                        <h3 class="product-name">Bingka keju</h3>
-                        <p class="product-price">Rp6.000 <span>/PCS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
-
-                <!-- Product 4 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/bingkacoklat.png" alt="Bingka coklat">
-                        </div>
-                        <h3 class="product-name">Bingka coklat</h3>
-                        <p class="product-price">Rp6.000 <span>/PCS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
-
-                <!-- Product 5 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/bingkakismis.png" alt="Bingka Kismis">
-                        </div>
-                        <h3 class="product-name">Bingka Kismis</h3>
-                        <p class="product-price">Rp6.000 <span>/SACKS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
-
-                <!-- Product 6 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/esmambocoklat.png" alt="es mambo coklat">
-                        </div>
-                        <h3 class="product-name">es mambo coklat</h3>
-                        <p class="product-price">Rp1.000 <span>/PCS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
-
-                <!-- Product 7 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/esmambotaro.png" alt="es mambo taro">
-                        </div>
-                        <h3 class="product-name">es mambo taro</h3>
-                        <p class="product-price">Rp1.000 <span>/PCS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
-
-                <!-- Product 8 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/esmambostrawberry.png" alt="es mambo strawberry">
-                        </div>
-                        <h3 class="product-name">es mambo strawberry</h3>
-                        <p class="product-price">Rp1.000 <span>/PCS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
-
-                <!-- Product 9 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/esmambomatcha.png" alt="es mambo matcha">
-                        </div>
-                        <h3 class="product-name">es mambo matcha</h3>
-                        <p class="product-price">Rp1.000 <span>/PCS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
-
-                <!-- Product 10 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/esmamboblueberry.png" alt="es mambo blueberry">
-                        </div>
-                        <h3 class="product-name">es mambo blueberry</h3>
-                        <p class="product-price">Rp1.000 <span>/PCS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
-
-                <!-- Product 11 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/boluketanhitam.png" alt="Bolu ketan original">
-                        </div>
-                        <h3 class="product-name">Bolu ketan original</h3>
-                        <p class="product-price">Rp15.000 <span>/3 PCS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
-
-                <!-- Product 12 -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="product-card">
-                        <div class="product-image">
-                            <img src="images/boluketanlumer.png" alt="Bolu ketan lumer">
-                        </div>
-                        <h3 class="product-name">Bolu ketan lumer</h3>
-                        <p class="product-price">Rp20.000 <span>/3 PCS</span></p>
-                        <button class="btn-pilih">Pilih</button>
-                    </div>
-                </div>
+            <div class="row g-4" id="product-list">
+                <!-- Produk akan dirender oleh JavaScript -->
             </div>
-        </div>
+    <div 
+        id="cart-alert"
+        class="alert alert-success position-fixed top-0 start-50 translate-middle-x mt-4 shadow"
+        style="display:none; z-index:1055;"
+        >
+        Produk ditambahkan ke keranjang
     </div>
-    <!-- ========= END PRODUCTS SECTION ========= -->
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="products.js"></script>
 </body>
 </html>
