perbaikan cart dan stylenya

--- a/admin.html
+++ b/admin.html
@@ -37,9 +37,9 @@
                             <div id="topmenu">
                                 <div class="menu">
                                     <ul>
-                                        <li><a href="#">Pembayaran</a></li>
-                                        <li><a href="#">Pesanan</a></li>
-                                        <li><a href="#">Manajemen</a></li>
+                                        <li><a href="adminpembayaran.html">Pembayaran</a></li>
+                                        <li><a href="adminpesanan.html">Pesanan</a></li>
+                                        <li><a href="adminmanajemen.html">Manajemen</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -60,37 +60,37 @@
     </div>
     <!-- ========= END TOPBAR ========= -->
 
-    <!-- ========= START MAIN CONTENT ========= -->
-    <div class="main-content">
-        <div class="container-fluid">
-            <div class="row">
-                <!-- Left Section -->
-                <div class="col-lg-6">
-                    <div class="left-section">
-                        <!-- Brand Section -->
-                        <div class="brand-section">
-                            <img src="images/miantie-logo-2.png" alt="Miantie Logo" class="mb-3" style="width: 280px;">
-                        </div>
+   <!-- ========= START MAIN CONTENT ========= -->
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Left Section -->
+            <div class="col-lg-6">
+                <div class="left-section">
+                    <!-- Brand Section -->
+                    <div class="brand-section">
+                        <img src="images/miantie-logo-2.png" alt="Miantie Logo" class="mb-3" style="width: 280px;">
+                    </div>
 
-                        <!-- Menu Buttons -->
-                        <div class="menu-buttons">
-                            <button class="menu-btn">Pembayaran</button>
-                            <button class="menu-btn">Pesanan</button>
-                            <button class="menu-btn">Manajemen</button>
-                        </div>
+                    <!-- Menu Buttons -->
+                    <div class="menu-buttons">
+                         <a href="adminpembayaran.html" class="menu-btn">Pembayaran</a>
+                         <a href="adminpesanan.html" class="menu-btn">Pesanan</a>
+                         <a href="adminmanajemen.html" class="menu-btn">Manajemen</a>
                     </div>
                 </div>
+            </div>  <!-- Tutup col-lg-6 kiri -->
 
-                <!-- Right Section -->
-                <div class="col-lg-6">
-                    <div class="right-section">
-                        <img src="images/illustration.png" alt="Illustration" class="illustration-img">
-                    </div>
+            <!-- Right Section -->
+            <div class="col-lg-6">
+                <div class="right-section">
+                    <img src="images/illustration.png" alt="Illustration" class="illustration-img">
                 </div>
-            </div>
+            </div>  <!-- Tutup col-lg-6 kanan -->
         </div>
     </div>
-    <!-- ========= END MAIN CONTENT ========= -->
+</div>
+<!-- ========= END MAIN CONTENT ========= -->
 
     <script src="admin.js"></script>
 </body>
