--- a/adminpembayaran.html
+++ b/adminpembayaran.html
@@ -36,9 +36,9 @@
                             <div id="topmenu">
                                 <div class="menu">
                                     <ul>
-                                        <li><a href="#">Pembayaran</a></li>
-                                        <li><a href="#">Pesanan</a></li>
-                                        <li><a href="#">Manajemen</a></li>
+                                        <li><a href="adminpembayaran.html">Pembayaran</a></li>
+                                        <li><a href="adminpesanan.html">Pesanan</a></li>
+                                        <li><a href="adminmanajemen.html">Manajemen</a></li>
                                     </ul>
                                 </div>
                             </div>
