--- a/adminpesanan.html
+++ b/adminpesanan.html
@@ -32,9 +32,9 @@
                             <div id="topmenu">
                                 <div class="menu">
                                     <ul>
-                                        <li><a href="#">Pembayaran</a></li>
-                                        <li><a href="#">Pesanan</a></li>
-                                        <li><a href="#">Manajemen</a></li>
+                                        <li><a href="adminpembayaran.html">Pembayaran</a></li>
+                                        <li><a href="adminpesanan.html">Pesanan</a></li>
+                                        <li><a href="adminmanajemen.html">Manajemen</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -65,7 +65,7 @@
         <div class="container-fluid">
             <!-- Brand Section -->
             <div class="brand-section" style="margin-top: 50px;">
-                <img src="images/miantie-logo.png" alt="Miantie Logo" style="width: 250px; height: auto;">
+                <img src="images/miantie-logo-2.png" alt="Miantie Logo" style="width: 250px; height: auto;">
             </div>
 
             <!-- Date Filter -->
