--- a/register.html
+++ b/register.html
@@ -104,7 +104,7 @@
 
                         <!-- Submit Button -->
                         <div class="text-center mt-5">
-                            <button type="submit" class="btn btn-daftar">Daftar</button>
+                            <a href="login.html" class="btn btn-daftar">Daftar</a>
                         </div>
                     </form>
                 </div>
