menyesuaikan alamat link buttonnya masing-masing

--- a/adminpesanan.html
+++ b/adminpesanan.html
@@ -159,12 +159,6 @@
     <!-- ========= END MAIN CONTENT ========= -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        function viewOrder(orderId) {
-            alert('Melihat detail pesanan ID: ' + orderId);
-            // Di sini bisa redirect ke halaman detail pesanan
-            // window.location.href = 'detail-pesanan.html?id=' + orderId;
-        }
-    </script>
+    <script src="admin.js"></script>
 </body>
 </html>
