--- a/index.html
+++ b/index.html
@@ -51,10 +51,8 @@
                  <div class="col">
                     <div id="cart" class="height-50">
                         <div class="vcenter">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#cartpayment">
-                                <img src="images/cart.png"> <span id="cart-count" class="badge rounded-pill bg-danger">0</span>
-                            </a>
-                            &nbsp; &nbsp; &nbsp; 
+                            <img class="cursor-pointer" data-bs-toggle="modal" data-bs-target="#cartpayment" src="images/cart.png"> <span id="cart-count" class="badge rounded-pill bg-danger">0</span>
+                                &nbsp;&nbsp;&nbsp;
                             <a href="register.html" class="fw-bold text-dark text-decoration-none">Login</a>
                             
                         </div>
@@ -111,7 +109,7 @@
                 <div class="col-md-8">
                     <h2 class="color-brown fw-bold">Mengapa memilih Miantie.id?</h2>
                     <p class="lead">Miantie.id telah hadir sejak 2020, memproduksi kue binkai khas Melayu dengan konsep home industry yang mengutamakan rasa autentik dan kualitas terbaik. Berfokus pada penjualan online, Miantie.id ingin menghadirkan pengalaman menikmati kue binkai yang hangat, lembut, dan baru keluar dari oven.</p>
-                    <a hreg="#" class="general-button">Cari tahu Miantie lebih lanjut</a>
+                    <a href="about.html" class="general-button">Cari tahu Miantie lebih lanjut</a>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -139,7 +137,7 @@
                     </div>
                 </div>
                 <br /><br />
-                <a href="#" class="general-button">Lihat produk</a>
+                <a href="products.html" class="general-button">Lihat produk</a>
             </div>
         </div>
     </div>
@@ -253,12 +251,12 @@
                             <!-- Title Keranjang -->
                             <h2 class="cart-title-modal">Keranjang</h2>
 
-                            <!-- ⭐ UBAH 1: Cart Items - KOSONGKAN, BIAR DIISI JS -->
+                            <!--  UBAH 1: Cart Items - KOSONGKAN, BIAR DIISI JS -->
                             <div class="cart-items-modal" id="cart-items">
                                 <!-- Item akan diisi otomatis oleh JavaScript dari localStorage -->
                             </div>
 
-                            <!-- ⭐ UBAH 2: Summary - TAMBAHKAN ID -->
+                            <!--  UBAH 2: Summary - TAMBAHKAN ID -->
                             <div class="cart-summary-modal">
                                 <div class="summary-row-modal">
                                     <span class="summary-label-modal">Subtotal</span>
