--- a/pembayaranbanktf.html
+++ b/pembayaranbanktf.html
@@ -93,12 +93,13 @@
 
             <!-- Bayar Button -->
             <div class="text-center mt-5">
-                <button type="button" class="btn-bayar-bank">Bayar</button>
+             <button type="button" class="btn-bayar" onclick="processPayment()">Bayar</button>
             </div>
         </div>
     </div>
     <!-- ========= END BANK TRANSFER SECTION ========= -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="payment.js"></script>
 </body>
 </html>
