--- a/pembayaranqris.html
+++ b/pembayaranqris.html
@@ -41,6 +41,7 @@
     <!-- ========= END QRIS PAYMENT SECTION ========= -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    
+    <script src="payment.js"></script>
+   
 </body>
 </html>
