--- a/products.html
+++ b/products.html
@@ -47,11 +47,9 @@
                 <div class="col">
                     <div id="cart" class="height-50">
                         <div class="vcenter">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#cartpayment">
-                                <img src="images/cart.png"> <span id="cart-count" class="badge rounded-pill bg-danger">0</span>
-                            </a>
-                            &nbsp; &nbsp; &nbsp; 
-                            <a href="login.html" class="fw-bold text-dark text-decoration-none">login</a>
+                                <img class="cursor-pointer" data-bs-toggle="modal" data-bs-target="#cartpayment" src="images/cart.png"> <span id="cart-count" class="badge rounded-pill bg-danger">0</span>
+                                &nbsp;&nbsp;&nbsp;
+                            <a href="register.html" class="fw-bold text-dark text-decoration-none">login</a>
                         </div>
                     </div>
                 </div>
