--- a/about.html
+++ b/about.html
@@ -51,11 +51,9 @@
                <div class="col">
                     <div id="cart" class="height-50">
                         <div class="vcenter">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#cartpayment">
-                                <img src="images/cart.png"> <span id="cart-count" class="badge rounded-pill bg-danger">0</span>
-                            </a>
-                            &nbsp; &nbsp; &nbsp; 
-                            <a href="login.html" class="fw-bold text-dark text-decoration-none">login</a>
+                                <img class="cursor-pointer" data-bs-toggle="modal" data-bs-target="#cartpayment" src="images/cart.png"> <span id="cart-count" class="badge rounded-pill bg-danger">0</span>
+                                &nbsp;&nbsp;&nbsp;
+                            <a href="register.html" class="fw-bold text-dark text-decoration-none">login</a>
                         </div>
                     </div>
                 </div>
@@ -198,7 +196,7 @@
         </div>
     </div>
     <!-- ========= END FOOTER ========= -->    
-     
+
          <!-- Vertically centered modal -->
 <div class="modal fade" id="cartpayment">
     <div class="modal-dialog modal-xl modal-dialog-centered">  
