--- a/adminpembayaran.html
+++ b/adminpembayaran.html
@@ -158,13 +158,8 @@
     <!-- ========= END MAIN CONTENT ========= -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        function logout() {
-            if(confirm('Apakah Anda yakin ingin logout?')) {
-                alert('Logout berhasil!');
-                // Redirect atau logic logout lainnya
-            }
-        }
-    </script>
+    <script src="admin.js"></script>
+      
+    
 </body>
 </html>
