--- a/orderberhasil.html
+++ b/orderberhasil.html
@@ -17,7 +17,7 @@
         <div class="container">
             <!-- Title -->
             <div class="text-center mb-5">
-                <h1 class="qris-title">Pembayaran Qris</h1>
+                <h1 class="qris-title">Terimakasih Telah Order</h1>
             </div>
 
             <div class="row align-items-center justify-content-center">
@@ -29,7 +29,7 @@
 
             <!-- Bayar Button -->
             <div class="text-center mt-5">
-                <button type="button" class="btn-bayar" onclick="processPayment()">Bayar</button>
+                <a href="index.html" class="btn-bayar">Kembali ke halaman utama</a>
             </div>
         </div>
     </div>
