--- a/uploadpaymentconfirm.html
+++ b/uploadpaymentconfirm.html
@@ -49,6 +49,7 @@
     <!-- ========= END UPLOAD PAYMENT SECTION ========= -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="payment.js"></script>
    
 </body>
 </html>
