menambahkan fitur fitur yg kurang seperti footer dan merapihkan gambar-gambar product

--- a/about.html
+++ b/about.html
@@ -188,9 +188,9 @@
             <br /><br />
             <div class="menu">
                 <ul>
-                    <li><a href="#"><img src="images/tiktok.png"></a></li>
-                    <li><a href="#"><img src="images/call.png"></a></li>
-                    <li><a href="#"><img src="images/instagram.png"></a></li>
+                    <li><a href="https://www.tiktok.com/@miantie.id?_t=ZS-8xYck0Wxauv&_r=1"><img src="images/tiktok.png"></a></li>
+                    <li><a href="https://wa.me/6285704738761"><img src="images/call.png"></a></li>
+                    <li><a href="https://www.instagram.com/miantie.id/profilecard/?igsh=eXM5YjA3dWJieHV5"><img src="images/instagram.png"></a></li>
                 </ul>
             </div>
         </div>
