--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="highlight-block height-700">
                         <div class="vcenter">
                             <h1 class="color-brown main-title">Kenangan Manis dalam Setiap Potong.</h1>
-                            <img src="images/yoga.png" class="img-fluid" />
+                            <img src="images/bingka-home.png" class="img-fluid" />
                         </div>
                     </div>
                 </div>
@@ -124,16 +124,16 @@
                 <h2 class="color-brown fw-bold">Daftar Produk Miantie</h2>
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
-                        <img src="images/bingka-keju.png" class="img-fluid">
+                        <img src="images/bingka-kejuhome.png" class="img-fluid">
                     </div>
                     <div class="col-md-3 col-sm-6">
-                        <img src="images/bingka-coklat.png" class="img-fluid">
+                        <img src="images/bingka-coklathome.png" class="img-fluid">
                     </div>
                     <div class="col-md-3 col-sm-6">
-                        <img src="images/bingka-original.png" class="img-fluid">
+                        <img src="images/bingka-originalhome.png" class="img-fluid">
                     </div>
                     <div class="col-md-3 col-sm-6">
-                        <img src="images/bingka-kismis.png" class="img-fluid">
+                        <img src="images/kismis.png" class="img-fluid">
                     </div>
                 </div>
                 <br /><br />
@@ -222,9 +222,9 @@
             <br /><br />
             <div class="menu">
                 <ul>
-                    <li><a href="#"><img src="images/tiktok.png"></a></li>
-                    <li><a href="#"><img src="images/call.png"></a></li>
-                    <li><a href="#"><img src="images/instagram.png"></a></li>
+                    <li><a href="https://www.tiktok.com/@miantie.id?_t=ZS-8xYck0Wxauv&_r=1"><img src="images/tiktok.png"></a></li>
+                    <li><a href="https://wa.me/6285704738761"><img src="images/call.png"></a></li>
+                    <li><a href="https://www.instagram.com/miantie.id/profilecard/?igsh=eXM5YjA3dWJieHV5"><img src="images/instagram.png"></a></li>
                 </ul>
             </div>
         </div>
