--- a/location.html
+++ b/location.html
@@ -135,6 +135,33 @@
             </div>
         </div>
     </div>
+
+    <!-- ========= START FOOTER ========= -->
+    <div id="footer" class="text-center">
+        <div class="container">
+            <img src="images/miantie-logo-2.png" class="img-fluid">
+            <br /><br />
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Homepage</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="location.html">Location</a></li>
+                    <li><a href="https://wa.me/6285704738761">Contact Us</a></li>
+                </ul>
+            </div>
+            <br /><br />
+            <div class="menu">
+                <ul>
+                    <li><a href="https://www.tiktok.com/@miantie.id?_t=ZS-8xYck0Wxauv&_r=1"><img src="images/tiktok.png"></a></li>
+                    <li><a href="https://wa.me/6285704738761"><img src="images/call.png"></a></li>
+                    <li><a href="https://www.instagram.com/miantie.id/profilecard/?igsh=eXM5YjA3dWJieHV5"><img src="images/instagram.png"></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- ========= END FOOTER ========= -->
+    
     <!-- ========= END LOCATION CONTENT ========= -->
           <!-- Vertically centered modal -->
     <div class="modal fade" id="cartpayment">
