perbaikan gambar produk

--- a/adminmanajemen.html
+++ b/adminmanajemen.html
@@ -123,7 +123,7 @@
                             <!-- Row 4 -->
                             <tr>
                                 <td>
-                                    <img src="images/Bingka-Kismis.png" alt="Bingka kismis" class="product-img">
+                                    <img src="images/bingkakismis.png" alt="Bingka kismis" class="product-img">
                                 </td>
                                 <td>Bingka kismis</td>
                                 <td>1</td>
